--- a/sections/banner-with-text.liquid
+++ b/sections/banner-with-text.liquid
@@ -7,29 +7,18 @@
   <div class="{% unless secSt.section_width %} page-width{% endunless %}">
 
     {% for block in section.blocks limit: section.blocks.size %}
-
       {%- assign blkSt = block.settings -%}
       {%- assign box-delay = forloop.index | minus:1 -%}
       {%- assign delay_time = 50 | times : box-delay -%}
-      {%- assign textCenter = blkSt.text_center -%}
 
       {%- capture image_layout -%}
-      <div class="{% unless hbStyle %}fl1{% endunless %}{% if hbStyle %}md:w-3/5 w-full md:order-0 order-5{% endif %} imgCol wow{% if blkSt.layout == 'right' %} fadeInRight{% else %} fadeInLeft{% endif %}" data-wow-delay="{{delay_time}}ms">
+      <div class="{% unless hbStyle %}fl1{% endunless %}{% if hbStyle %}md:w-3/5 w-full{% endif %} imgCol wow{% if blkSt.layout == 'right' %} fadeInRight{% else %} fadeInLeft{% endif %}" data-wow-delay="{{delay_time}}ms">
         {% if blkSt.image != blank %}
           {%- assign img_url = blkSt.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
-
-          {% if blkSt.image_mb != blank %}
-          <section class="md:hidden block"> {{ blkSt.image_mb | image_url: width: 980 | image_tag: height: 'auto', class: 'w-full mt-8', lazyload: true }} </section>
-          {% endif %}
-          
-          <span class="{% if blkSt.image_mb != blank %}md:block hidden{% endif %} imgWrapper"
-             style="max-width:{{ blkSt.image.width }}px;">
-            <img class="imgFl feature-row__image lazyload" width="{{ blkSt.image.width }}" height="{{ blkSt.image.height }}" loading="lazy"
-              data-src="{{ img_url }}" data-widths="[180, 360, 540, 720, 900]" data-aspectratio="{{ blkSt.image.aspect_ratio }}" data-sizes="auto" alt="{{ blkSt.image.alt | escape }}">
+          <span class="imgWrapper" style="max-width:{{ blkSt.image.width }}px;">
+              <img class="imgFl feature-row__image lazyload" width="{{ blkSt.image.width }}" height="{{ blkSt.image.height }}"
+                data-src="{{ img_url }}" data-widths="[180, 360, 540, 720, 900]" data-aspectratio="{{ blkSt.image.aspect_ratio }}" data-sizes="auto" alt="{{ blkSt.image.alt | escape }}">
           </span>
-
-
-
         {% else %}
         	{{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
         {% endif %}
@@ -40,17 +29,17 @@
        
        
         {% if hbStyle %}
-        <div class="page-width xl:px-4 px-8 fl f-aic f-col f-row-md">
+        <div class="page-width fl f-aic f-col f-row-md">
         {% endif %}
     
         {{ image_layout }}
-        <div class="md:{{blkSt.text_align}} {% if textCenter %}md:text-left text-center {% endif %}{% unless hbStyle %}fl1 {% endunless %}{% if hbStyle %}md:w-2/5 md:mb-8 mb-0 md:mt-0 mt-10 {% endif %}feature-row__text {{ blkSt.layout }} wow{% if blkSt.layout == 'right' %} fadeInLeft{% else %} fadeInRight{% endif %}" data-wow-delay="{{delay_time}}ms">
-          <div class="row-text {% if hbStyle %}!m-0 !p-0{% endif %}">
+        <div class="{% unless hbStyle %}fl1{% endunless %}{% if hbStyle %}md:w-2/5 mb-8 md:mt-0 mt-4{% endif %} feature-row__text {{ blkSt.layout }} wow{% if blkSt.layout == 'right' %} fadeInLeft{% else %} fadeInRight{% endif %}" data-wow-delay="{{delay_time}}ms">
+          <div class="row-text md:{{blkSt.text_align}} {% if hbStyle %}text-center !m-0 !p-0{% endif %}">
             {% if blkSt.title != blank %}
-              <h3 class="{% if hbStyle %}md:!text-4_5xl !text-2_5xl{% endif %} ttlTxt mb{{secSt.tmbm}} mb{{secSt.tmb}}-md" style="--tcl:{{blkSt.tcl}};--tfs:{{secSt.tfs}}px;--tff:var(--{{secSt.tff}});--tfw:{{secSt.tfw}};--tlh:{{secSt.tlh}};">{{ blkSt.title }}</h3>
+              <h3 class="{% if hbStyle %}md:text-4_5xl text-3xl{% endif %} ttlTxt mb{{secSt.tmbm}} mb{{secSt.tmb}}-md" style="--tcl:{{blkSt.tcl}};--tfs:{{secSt.tfs}}px;--tfsm:{{secSt.tfsm}}px;--tff:var(--{{secSt.tff}});--tfw:{{secSt.tfw}};--tlh:{{secSt.tlh}};">{{ blkSt.title }}</h3>
             {% endif %}
             {% if blkSt.text != blank %}
-              <div class="{% if hbStyle %}md:text-xl{% endif %} rgTxt rte featured-row__subtext mb{{secSt.mbm}} mb{{secSt.mb}}-md" style="--cl:{{blkSt.cl}};--fs:{{secSt.fs}}px;--fw:{{secSt.fw}};--lh:{{secSt.lh}};">
+              <div class="{% if hbStyle %}text-xl{% endif %} rgTxt rte featured-row__subtext mb{{secSt.mbm}} mb{{secSt.mb}}-md" style="--cl:{{blkSt.cl}};--fs:{{secSt.fs}}px;--fsm:{{secSt.fsm}}px;--fw:{{secSt.fw}};--lh:{{secSt.lh}};">
                   {{ blkSt.text }}
               </div>
             {% endif %}
@@ -60,12 +49,12 @@
           </div>
 
           {% if hbStyle %}
-              <div class="md:mt-20 mt-10 ">
+              <div class="md:mt-20 mt-10 md:text-left text-center">
               {% if blkSt.bottom_logo != blank %}
-                <a class="mr-4 inline-block" href="{{blkSt.logo_url}}">{{ blkSt.bottom_logo | image_url: height: 300 | image_tag: height: blkSt.bottom_logo.height, loading: 'lazy' }}</a>
+                <a class="mr-4" href="{{blkSt.logo_url}}">{{ blkSt.bottom_logo | image_url: height: 100 | image_tag: height: 50, loading: 'lazy' }}</a>
               {% endif %}
               {% if blkSt.bottom_logo2 != blank %}
-                <a href="{{blkSt.logo_url2}}">{{ blkSt.bottom_logo2 | image_url: height: 300 | image_tag: height: blkSt.bottom_logo2.height, loading: 'lazy' }}</a>
+                <a href="{{blkSt.logo_url2}}">{{ blkSt.bottom_logo2 | image_url: height: 100 | image_tag: height: 50, loading: 'lazy' }}</a>
               {% endif %}
               </div>
           {% endif %}
@@ -255,11 +244,11 @@
         "type": "range",
         "id": "tfsm",
         "label": "Font Size (mobile)",
-        "default": 100,
-        "min": 50,
-        "max": 300,
-        "step": 5,
-        "unit": "%"
+        "default": 22,
+        "min": 10,
+        "max": 60,
+        "step": 1,
+        "unit": "px"
     },
     {
         "type": "select",
@@ -357,11 +346,11 @@
             "type": "range",
             "id": "fsm",
             "label": "Font Size (mobile)",
-            "default": 85,
-            "min": 50,
-            "max": 300,
-            "step": 5,
-            "unit": "%"
+            "default": 12,
+            "min": 10,
+            "max": 60,
+            "step": 1,
+            "unit": "px"
         },
         {
             "type": "select",
@@ -467,25 +456,20 @@
         "type": "row",
         "name": "Block",
         "settings": [
-        {
-          "type": "image_picker",
-          "id": "image",
-          "label": "Image"
-        },  
-        {
-          "type": "image_picker",
-          "id": "image_mb",
-          "label": "Image (mobile)"
-        },  
-        {
-        "type": "select",
-        "id": "layout",
-        "label":"Image alignment",
-        "default": "left",
-        "options": [
-          { "value": "left","label":"Left"},
-          { "value": "right","label":"Right"}
-        ]
+           {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Image"
+      },  
+       {
+            "type": "select",
+            "id": "layout",
+			"label":"Image alignment",
+ 			"default": "left",
+			"options": [
+        { "value": "left","label":"Left"},
+				{ "value": "right","label":"Right"}
+			]
       },	  
       {
         "type": "textarea",
@@ -551,12 +535,6 @@
                 "label": "Right"
               }
             ]
-      },
-      {
-        "type": "checkbox",
-        "id": "text_center",
-        "label": "Text align center?(mobile)",
-        "default": false
       },
 	 {
         "type": "header",
