--- a/sections/collections-banners.liquid
+++ b/sections/collections-banners.liquid
@@ -6,12 +6,12 @@
     --dtbg:{{secSt.bg | color_modify:'alpha', secSt.bxopt}};
     --dtbdr:{{secSt.bdr}}px;
     --dttfs:{{secSt.tfs}}px;
-    --dttfsm:{{secSt.tfsm | divided_by: 100.0 }}rem;
+    --dttfsm:{{secSt.tfsm}}px;
     --dttff:var(--{{secSt.tff}});
     --dttfw:{{secSt.tfw}};
     --dttlh:{{secSt.tlh}};
     --dtfs:{{secSt.fs}}px;
-    --dtfsm:{{secSt.fsm | divided_by: 100.0 }}rem;
+    --dtfsm:{{secSt.fsm}}px;
     --dtfw:{{secSt.fw}};
     --dtlh:{{secSt.lh}};
 {% endcapture %}
@@ -211,14 +211,14 @@
         "unit": "px"
       },
       {
-          "type": "range",
-          "id": "tfsm",
-          "label": "Font Size (mobile)",
-          "default": 100,
-          "min": 50,
-          "max": 300,
-          "step": 5,
-          "unit": "%"
+        "type": "range",
+        "id": "tfsm",
+        "label": "Font Size(mobile)",
+        "default": 16,
+        "min": 10,
+        "max": 100,
+        "step": 1,
+        "unit": "px"
       },
     {
         "type": "select",
@@ -293,14 +293,14 @@
         "unit": "px"
       },
       {
-          "type": "range",
-          "id": "fsm",
-          "label": "Font Size (mobile)",
-          "default": 85,
-          "min": 50,
-          "max": 300,
-          "step": 5,
-          "unit": "%"
+        "type": "range",
+        "id": "fsm",
+        "label": "Font Size(mobile)",
+        "default": 12,
+        "min": 10,
+        "max": 100,
+        "step": 1,
+        "unit": "px"
       },
     {
         "type": "select",
