--- a/sections/custom-content.liquid
+++ b/sections/custom-content.liquid
@@ -48,7 +48,7 @@
                             {% endif %}              	
                             </style>
                         {% elsif block.type == 'video' %}
-                            <div class="video-sec" style="--fs:{{blkSt.tfs}}px;--fsm:{{blkSt.tfsm | divided_by: 100.0 }}rem;"> 
+                            <div class="video-sec" style="--fs:{{blkSt.tfs}}px;--fsm:{{blkSt.tfsm}}px;"> 
                                 {% if blkSt.video_url == blank and blkSt.mp4url == blank	%}
                                     <div class="video-wrapper">
                                         <iframe src="//www.youtube.com/embed/_9VUPq3SxOc?rel=0&showinfo=0&vq=720" width="850" height="480" frameborder="0" allowfullscreen></iframe>
@@ -497,11 +497,11 @@
           "type": "range",
           "id": "tfsm",
           "label": "Font Size (mobile)",
-          "default": 100,
-          "min": 50,
-          "max": 300,
-          "step": 5,
-          "unit": "%"
+          "default": 12,
+          "min": 10,
+          "max": 60,
+          "step": 1,
+          "unit": "px"
       },
         {
                 "type": "select",
