--- a/sections/image-list-text.liquid
+++ b/sections/image-list-text.liquid
@@ -4,34 +4,34 @@
 
 {%- case secSt.img_size -%}
   {%- when "big" -%}
-  {% assign imgSizeClass = "w-full" %}
-  {% assign textMtClass = "md:mt-[28%] mt-10" %}
+  {% assign imgSizeClass = "md:w-full" %}
+  {% assign textMtClass = "md:mt-[28%] mt-8" %}
   {%- when "default" -%}
-  {% assign imgSizeClass = "md:w-[85%] w-full" %}
-  {% assign textMtClass = "md:mt-[15%] mt-10" %}
+  {% assign imgSizeClass = "md:w-[85%]" %}
+  {% assign textMtClass = "md:mt-[22%] mt-8" %}
   {%- when "small" -%}
-  {% assign imgSizeClass = "md:w-[70%] w-full" %}
-  {% assign textMtClass = "md:mt-[12%] mt-10" %}
+  {% assign imgSizeClass = "md:w-[70%]" %}
+  {% assign textMtClass = "md:mt-[15%] mt-8" %}
 {%- endcase -%}
 
   <section section-name="image-list-text" style="background-color:{{secSt.bg_color}};" class="{% render 'section-interva-set' , secSt:secSt %}" >
-    <div class="page-width xl:px-4 md:px-8 px-6 mx-auto flex md:flex-row flex-col {% if secSt.bottom_line %}border-solid border-0 border-b border-black-300 pb-8 {% endif %}">
+    <div class="page-width px-4 mx-auto md:flex {% if secSt.bottom_line %}border-solid border-0 border-b border-black-300 pb-8 {% endif %}">
 
-      <div class='pad:w-[59.5%] md:w-1/2 flex justify-center items-center {% if secSt.layout == "textImage" %}order-3{%else%}md:order-1 order-3{% endif %}' >
+      <div class='md:w-[59.5%] flex justify-center items-center {% if secSt.layout == "textImage" %}order-3{%else%}order-1{% endif %}' >
         {{ secSt.img | image_url: width: 1000 | image_tag: width: nil, loading: 'lazy', class:imgSizeClass }}
       </div>
-      <div class="pad:w-[40.5%] md:w-1/2 order-2 flex flex-col md:text-left text-center md:mb-0 mb-6">
-        <div class="md:mr-2 md:text-left text-center"> 
-          <h1 class="md:text-4_5xl text-2_5xl">{{ secSt.text_main  }}</h1>
-          <p class="md:text-lg text-base md:mb-6 mb-4 break-words">{{ secSt.text_sub | newline_to_br }}</p>
-          <p class="md:text-lg text-base text-black-600 md:mb-8 mb-4">{{ secSt.text_dec | newline_to_br }}</p>
+      <div class="md:w-[40.5%] order-2 flex flex-col">
+        <div class="md:mr-2"> 
+          <h1 class="md:text-4_5xl text-2xl">{{ secSt.text_main  }}</h1>
+          <p class="text-lg md:mb-6 mb-4 break-words">{{ secSt.text_sub | newline_to_br }}</p>
+          <p class="text-lg text-black-600 md:mb-8 mb-4">{{ secSt.text_dec | newline_to_br }}</p>
         </div>
-        <div class="flex flex-wrap {{ textMtClass }}">
+        <div class="flex flex-wrap {{textMtClass}}">
           {% for block in section.blocks %}
           {%- assign blkSt = block.settings -%}
-              <div class="w-1/3 mb-6 md:text-left text-center">
-                <p class="m-0 md:text-2xl text-xl font-semibold leading-tight">{{blkSt.item_title}}</p>
-                <p class="m-0 md:text-base text-sm">{{blkSt.item_dec}}</p>
+              <div class="w-1/3 mb-6">
+                <p class="m-0 text-2xl font-semibold leading-tight">{{blkSt.item_title}}</p>
+                <p class="m-0 text-base">{{blkSt.item_dec}}</p>
               </div>
           {% endfor %}
         </div>
