--- a/sections/image-text.liquid
+++ b/sections/image-text.liquid
@@ -2,17 +2,17 @@
 
 {% if secSt.bg_img != blank %}
   <section section-name="image-text" class="{% render 'section-interva-set' , secSt:secSt %}" >
-    <div class="page-width xl:px-4 md:px-8 px-6">
+    <div class="page-width px-4">
 
-      <div class="md:rounded-section rounded-4xl md:flex overflow-hidden relative md:h-auto h-[92vw]" style="background-color:{{secSt.bg_color}};">
-        <div class="md:w-3/5 md:opacity-100 opacity-40 md:h-auto h-full" >
-          {{ secSt.bg_img | image_url: width: 1920 | image_tag: width: nil, loading: 'lazy',class:'block w-full md:h-auto h-full md:object-fill object-cover object-left' }}
+      <div class="md:rounded-section rounded-3xl md:flex overflow-hidden" style="background-color:{{secSt.bg_color}};">
+        <div class="md:w-3/5" >
+          {{ secSt.bg_img | image_url: width: 1920 | image_tag: width: nil, loading: 'lazy',class:'block' }}
         </div>
-        <div class="md:w-2/5 flex flex-col justify-center md:mb-8 my-4 text-white md:pl-6 px-4 w-full md:static absolute top-1/3 md:text-left text-center left-1/2 md:translate-x-0 -translate-x-1/2">
-          <h1 class="md:text-4xl text-2_5xl md:mb-5 mb-0">{{ secSt.text_main  }}</h1>
-          <p class="md:text-xl md:mb-8 mb-4">{{ secSt.text_sub  }}</p>
+        <div class="md:w-2/5 flex flex-col justify-center md:mb-8 my-4 text-white md:pl-6 px-4">
+          <h1 class="md:text-4xl text-2xl">{{ secSt.text_main  }}</h1>
+          <p class="md:text-xl text-lg md:mb-8 mb-4">{{ secSt.text_sub  }}</p>
           <div>
-            <a href="{{ secSt.url }}" class="btn md:btn-contrast btn-vi md:text-base text-sm py-1 px-5">{{ secSt.text_btn  }}</a>
+            <a href="{{ secSt.url }}" class="btn btn-contrast text-base py-1 px-5">{{ secSt.text_btn  }}</a>
           </div>
         </div>
       </div>
