--- a/sections/list-collections-template.liquid
+++ b/sections/list-collections-template.liquid
@@ -13,7 +13,7 @@
     --dtbgm:{{secSt.bg}};
     --dtbdr:{{secSt.bdr}}px;
     --dttfs:{{secSt.tfs}}px;
-    --dttfsm:{{secSt.tfsm | divided_by: 100.0 }}rem;
+    --dttfsm:{{secSt.tfsm}}px;
     --dttff:var(--{{secSt.tff}});
     --dttfw:{{secSt.tfw}};
     --dttlh:{{secSt.tlh}};
@@ -212,14 +212,14 @@
         "unit": "px"
       },
       {
-          "type": "range",
-          "id": "tfsm",
-          "label": "Font Size (mobile)",
-          "default": 100,
-          "min": 50,
-          "max": 300,
-          "step": 5,
-          "unit": "%"
+        "type": "range",
+        "id": "tfsm",
+        "label": "Font Size(mobile)",
+        "default": 16,
+        "min": 10,
+        "max": 100,
+        "step": 1,
+        "unit": "px"
       },
     {
         "type": "select",
