--- a/sections/richtext.liquid
+++ b/sections/richtext.liquid
@@ -10,8 +10,8 @@
       {%- endif -%}
 
       <div class="page-width {{secSt.txt_align}}" style="max-width:{{secSt.max-width}}px;">                   
-          {% if secSt.title != blank %}<h2 class="ttlTxt" style="--tcl:{{secSt.tcl}};--tfs:{{secSt.tfs}}px;--tfsm:{{secSt.tfsm | divided_by: 100.0 }}rem;--tff:var(--{{secSt.tff}});--tfw:{{secSt.tfw}};--tlh:{{secSt.tlh}}">{{ secSt.title}}</h2>{% endif %}
-          {% if secSt.richtxt != blank %}<div class="rgTxt mb20" style="--cl:{{secSt.cl}};--fs:{{secSt.fs}}px;--fsm:{{secSt.fsm | divided_by: 100.0 }}rem;--lh:{{secSt.lh}}">{{ secSt.richtxt }}</div>{% endif %}
+          {% if secSt.title != blank %}<h2 class="ttlTxt" style="--tcl:{{secSt.tcl}};--tfs:{{secSt.tfs}}px;--tfsm:{{secSt.tfsm}}px;--tff:var(--{{secSt.tff}});--tfw:{{secSt.tfw}};--tlh:{{secSt.tlh}}">{{ secSt.title}}</h2>{% endif %}
+          {% if secSt.richtxt != blank %}<div class="rgTxt mb20" style="--cl:{{secSt.cl}};--fs:{{secSt.fs}}px;--fsm:{{secSt.fsm}}px;--lh:{{secSt.lh}}">{{ secSt.richtxt }}</div>{% endif %}
     
         {% if secSt.btntxt and secSt.btnurl != blank %}                             
             <a class="btn {{secSt.btn-size-mob}} {{secSt.btn-size-desk}} {{secSt.btn-style}}" href="{{secSt.btnurl}}">{{ secSt.btntxt }}</a>
@@ -108,11 +108,11 @@
             "type": "range",
             "id": "tfsm",
             "label": "Font Size (mobile)",
-            "default": 100,
-            "min": 50,
-            "max": 300,
-            "step": 5,
-            "unit": "%"
+            "default": 20,
+            "min": 10,
+            "max": 60,
+            "step": 1,
+            "unit": "px"
         },
         {
             "type": "select",
@@ -198,12 +198,12 @@
             "type": "range",
             "id": "fsm",
             "label": "Font Size (mobile)",
-            "default": 85,
-            "min": 50,
-            "max": 300,
-            "step": 5,
-            "unit": "%"
-        },  
+            "default": 13,
+            "min": 10,
+            "max": 60,
+            "step": 1,
+            "unit": "px"
+        },       
         {
             "type": "range",
             "id": "lh",
