--- a/snippets/product-giveaways.liquid
+++ b/snippets/product-giveaways.liquid
@@ -1,10 +1,10 @@
 {%- capture productTabs -%}
-<div section-name="product-giveaways" class="md:mb-4 mb-8 rounded-md shadow-[#ebebeb4f_0px_1px_10px_8px] overflow-hidden">
+<div section-name="product-giveaways" class="mb-4 rounded-md shadow overflow-hidden">
   <div class="flex p-4">
-    {{ block.Image | image_url: width: 200 | image_tag: width: nil, loading: 'lazy', class: "max-w-1/3 h-auto" }}
+    {{ block.Image | img_url: '105x' | img_tag }}
     <div class="ml-4">
       <p class="text-base font-extrabold mb-0">{{ block.title }}</p>
-      <p class="md:text-sm text-[.925rem] line-through mb-0 text-black-600">{{ block.price | money }}</p>
+      <p class="text-sm line-through mb-0">{{ block.price | money }}</p>
       <div class="bg-vi rounded-full px-2 text-white text-xs inline-block mt-3">{{ block.tag }}</div>
     </div>
   </div>
